Wed Apr 25 09:44:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Added Bug_2908_Regression

Wed Apr 25 08:45:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * ace/config-lynxos.h:
          LynxOS4.2 does not seem to have thread process scoping.

Wed Apr 25 08:16:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2912_Regression_Test.cpp:
          New regression for bug 2912. Thanks to Paul Daugherty
          <paul at nxicom dot com> for reporting this issue and delivering
          this regression test

        * ace/SSL/SSL_Asynch_Stream.cpp (do_SSL_read):
          Added ERR_clear_error before doing a SSL_read

        * tests/run_test.lst:
        * tests/tests.mpc:
          Added Bug_2912_Regression

Wed Apr 25 07:09:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug_2356_Regression

Wed Apr 25 07:00:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Global_Macros.h:
          Also with msvc9 expand ACE_THROW_SPEC to throw (...)

        * ace/CDR_Stream.cpp (clone_from):
          Also copy the char and wchar translators

        * ace/UUID.cpp:
          Layout change

Tue Apr 24 13:37:42 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/SOCK_Dgram_Test.cpp: Add missing #include "ace/OS_NS_string.h"

Tue Apr 24 11:46:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sock_Connect.cpp (get_ip_interfaces_aix):
          Fixed resource leak. Thanks to Werner Buchert
          <w dot buchert at medat dot de> for reporting this

Tue Apr 24 10:20:58 UTC 2007  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Fixed run-time linking error with GCC 3.2.2.

Tue Apr 24 09:10:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Enabled Dirent test again for VxWorks RTP

        * ace/Addr.cpp: